--- a/src/i18n/ua/translations.json
+++ b/src/i18n/ua/translations.json
@@ -3,6 +3,7 @@
     "common": {
       "postal-code": "Поштовий індекс",
       "top": "Топ",
+      "add-card": "Додати карту",
       "countries": {
         "de": "Німеччина",
         "at": "Австрія",
@@ -14,6 +15,79 @@
     },
     "buy": {
       "title": "Купити "
+    },
+    "login": {
+      "title": "Вхід",
+      "form": {
+        "email": "Пошта",
+        "password": "Пароль",
+        "save-password": "Зберегти пароль",
+        "forgot-password": "Забули пароль?",
+        "connection-secure": "Безпечне з'єднання",
+        "error": "Пароль або адреса електронної пошти неправильні",
+        "no-account": "Не маєте аккаунту?"
+      }
+    },
+    "register": {
+      "title": "Реєстрація",
+      "form": {
+        "first-name": "Ім'я",
+        "last-name": "Прізвище",
+        "email": "Пошта",
+        "password": "Пароль",
+        "password-placeholder": "Пароль ({{value}} або більше символів)",
+        "terms-agree": "Так, я розумію та погоджуюся з <span>Умовами використання</span>."
+      }
+    },
+    "payments": {
+      "title": "Варіанти оплати",
+      "basic": "За замовчуванням",
+      "make-basic": "Зробити за замовчуванням",
+      "no-cards": "Наразі у вас немає прикріплених карток.",
+      "unknown-payment system": "Невідома або нестандартна платіжна система",
+      "validity-period": "Строк Дії",
+      "card-number": "Номер картки",
+      "modal": {
+        "success": "КАРТУ ДОДАНО!",
+        "success-info": "Щиро вітаємо! Вашу картку успішно додано.",
+        "error": "ПОМИЛКА",
+        "error-info": "Помилка: виникла проблема. Спробуйте пізніше."
+      }
+    },
+    "order": {
+      "title": "Замовити фото/відео ",
+      "price-list": {
+        "title": "ПРАЙС-ЛИСТ",
+        "area": "Площа (m²)",
+        "up-to": "до",
+        "from": "від",
+        "photo": "Фото",
+        "video": "Відео",
+        "combo": "Комбо"
+      },
+      "included": {
+        "title": "ВКЛЮЧЕНО",
+        "license-music": "Ліцензія на музику для відео",
+        "video-thumbnail": "Мініатюра відео",
+        "logo": "Відображення логотипу (фото/відео)"
+      },
+      "extra": {
+        "title": "ДОДАТКОВО",
+        "social-media": "Формати соціальних мереж (TikTok/Reel)",
+        "drone-footage": "Зйомка дроном",
+        "travel-outside": "Витрати на проїзд за межі Відня",
+        "by": "за"
+      },
+      "text-area": {
+        "placeholder": "Замовляю наступний товар:\nАдреса:\nОсь моя запропонована дата:"
+      },
+      "modal": {
+        "title": "ВІТАЄМО!",
+        "text": "Ваше замовлення успішно відправлено. Найближчим часом з вами зв'яжеться спеціаліст. Дякуємо за використання Fylpi!"
+      }
+    },
+    "favorites": {
+      "title": "Вибране "
     },
     "messages": {
       "title": "Мої повідомлення",
@@ -316,6 +390,7 @@
       "next": "Вперед",
       "sign-in": "Увійти",
       "logout": "Вийти",
+      "login": "Вхід",
       "place-advertisement": "Розмістити оголошення",
       "find": "Пошук",
       "view-on-map": "ПЕРЕГЛЯНУТИ НА КАРТІ",
@@ -338,7 +413,9 @@
       "find-reason": "З'ясуйте причину",
       "create-ad": "Створити оголошення",
       "pay": "Оплатити",
-      "next-page": "Наступна сторінка"
+      "next-page": "Наступна сторінка",
+      "attach-card": "Додайте карту",
+      "register": "Зареєструватися"
     },
     "knowledge-real-estate": {
       "title": "Інформація про нерухомість ",
