--- a/src/i18n/ua/translations.json
+++ b/src/i18n/ua/translations.json
@@ -28,6 +28,26 @@
         "no-account": "Не маєте аккаунту?"
       }
     },
+    "forgot-password": {
+      "title": "ЗАБУЛИ ПАРОЛЬ?",
+      "step1": "Введіть свою електронну адресу нижче, і ми надішлемо вам посилання для створення нового пароля.",
+      "step2": "Ми надіслали електронний лист із кодом підтвердження на ваш обліковий запис електронної пошти!",
+      "step3": "Встановіть новий пароль для входу в обліковий запис!",
+      "input": {
+        "step1": {
+          "label": "Пошта",
+          "placeholder": "johnsmith@email.at"
+        },
+        "step2": {
+          "label": "Kод підтвердження",
+          "placeholder": "Введіть код"
+        },
+        "step3": {
+          "label": "Пароль",
+          "placeholder": "Введіть новий пароль"
+        }
+      }
+    },
     "register": {
       "title": "Реєстрація",
       "form": {
@@ -37,6 +57,13 @@
         "password": "Пароль",
         "password-placeholder": "Пароль ({{value}} або більше символів)",
         "terms-agree": "Так, я розумію та погоджуюся з <span>Умовами використання</span>."
+      },
+      "confirm-register": {
+        "p": "Щоб завершити процес реєстрації, перевірте свою електронну пошту. Ми надіслали вам повідомлення з інструкціями щодо підтвердження вашої електронної адреси. Натисніть посилання в цьому листі, щоб активувати свій обліковий запис.",
+        "modal": {
+          "title": "ВІТАЄМО!",
+          "p": "Ваш обліковий запис успішно активовано. Тепер ви можете користуватися всіма функціями нашого сайту. Дякуємо за реєстрацію!"
+        }
       }
     },
     "payments": {
@@ -415,7 +442,9 @@
       "pay": "Оплатити",
       "next-page": "Наступна сторінка",
       "attach-card": "Додайте карту",
-      "register": "Зареєструватися"
+      "register": "Зареєструватися",
+      "restore": "Відновити",
+      "confirm-email": "Підтвердьте електронну адресу"
     },
     "knowledge-real-estate": {
       "title": "Інформація про нерухомість ",
