refactor: add translations to actions buttons

--- a/src/i18n/de/translations.json
+++ b/src/i18n/de/translations.json
@@ -444,7 +444,9 @@
       "attach-card": "Eine Karte anhängen",
       "register": "Registrieren Sie sich",
       "restore": "Wiederherstellen",
-      "confirm-email": "E-Mail bestätigen"
+      "confirm-email": "E-Mail bestätigen",
+      "like": "SPEICHERN",
+      "share": "TEILEN"
     },
     "knowledge-real-estate": {
       "title": "Wissen rund um die Immobilie ",
