--- a/src/i18n/ua/translations.json
+++ b/src/i18n/ua/translations.json
@@ -444,7 +444,9 @@
       "attach-card": "Додайте карту",
       "register": "Зареєструватися",
       "restore": "Відновити",
-      "confirm-email": "Підтвердьте електронну адресу"
+      "confirm-email": "Підтвердьте електронну адресу",
+      "like": "ЗБЕРЕГТИ",
+      "share": "ПОДІЛИТИСЬ"
     },
     "knowledge-real-estate": {
       "title": "Інформація про нерухомість ",
