--- a/src/i18n/ua/translations.json
+++ b/src/i18n/ua/translations.json
@@ -335,7 +335,8 @@
     },
     "errors": {
       "invalid-number": "Невірний ввід: \"{{value}}\". Дозволяються лише цифри.",
-      "min-greater-max": "Мінімальне значення не може перевищувати максимальне значення"
+      "min-greater-max": "Мінімальне значення не може перевищувати максимальне значення",
+      "login-failed": "Неправильний Логін або Пароль"
     },
     "my-account": {
       "title": "Мій аккаунт"
