--- a/src/i18n/ua/translations.json
+++ b/src/i18n/ua/translations.json
@@ -9,7 +9,14 @@
         "at": "Австрія",
         "uk": "Україна"
       },
-      "not-found": "Об'єктів не знайдено..."
+      "not-found": "Об'єктів не знайдено...",
+      "toast-messages": {
+        "data-saved": "Дані збережено",
+        "something-went-wrong": "Щось пішло не так",
+        "upload-failed": "Завантаження не вдалося",
+        "upload-success": "Завантаження успішне",
+        "add-images": "Будьте ласкаві, додайте зображення"
+      }
     },
     "rent": {
       "title": "Оренда "
